--- a/package.json
+++ b/package.json
@@ -22,8 +22,10 @@
     "validate.js": "^0.10.0"
   },
   "devDependencies": {
+    "babel-eslint": "^6.1.2",
     "babel-plugin-transform-class-properties": "^6.10.2",
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
+    "eslint": "^3.1.1",
     "ncp": "^2.0.0"
   }
 }
