--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "celic.requisicoesdeservico",
+  "name": "meteor-aurelia-seed",
   "private": true,
   "scripts": {
     "start": "meteor run",
@@ -7,14 +7,14 @@
   },
   "dependencies": {
     "aurelia-bootstrapper-meteor": "^1.0.0-rc.1.0.0",
-    "aurelia-event-aggregator": "^1.0.0-rc.1.0.0",
-    "aurelia-framework": "^1.0.0-rc.1.0.0",
-    "aurelia-history-browser": "^1.0.0-rc.1.0.0",
-    "aurelia-logging-console": "^1.0.0-rc.1.0.0",
-    "aurelia-router": "^1.0.0-rc.1.0.0",
-    "aurelia-templating-binding": "^1.0.0-rc.1.0.0",
-    "aurelia-templating-resources": "^1.0.0-rc.1.0.0",
-    "aurelia-templating-router": "^1.0.0-rc.1.0.0",
+    "aurelia-event-aggregator": "^1.0.0",
+    "aurelia-framework": "^1.0.0",
+    "aurelia-history-browser": "^1.0.0",
+    "aurelia-logging-console": "^1.0.0",
+    "aurelia-router": "^1.0.0",
+    "aurelia-templating-binding": "^1.0.0",
+    "aurelia-templating-resources": "^1.0.0",
+    "aurelia-templating-router": "^1.0.0",
     "bootstrap": "^3.3.6",
     "font-awesome": "^4.6.3",
     "meteor-node-stubs": "~0.2.0",
